@startuml modelo-de-dominio

class Maquina {
    + nombre
    + List<Billetes> billetes
    + List<Monedas> monedas
    + List<Productos> productos

    + Maquina(String nombre, List<Billete> billetes, List<Moneda> monedas, List<Producto> productos)
    + totalBilletes()
    + totalMonedas()
    + totalProductos()
}

class Billete {
    + valor
    + cantidad

    + Billete(double valor, int cantidad)
    + List<Billete> crearListaDeBilletes(int cant1, int cant2, int cant3, int cant4, int cant5)
}

class Moneda {
    + valor
    + cantidad

    + Moneda(double valor, int cantidad)
    + List<Moneda> crearListaDeMonedas(int cant1, int cant2, int cant3)
}

class Producto {
    + nombre
    + precio
    + cantidad

    + Producto(String nombre, double precio, int cantidad)
    + actualizarPrecio(double precio)
    + actualizarNombre(String nombre)
    + actualizarCantidad(int cantidad)
    + List<Producto> crearListaDeProductos()
}

class Dinero {
    + valor
    + cantidad

    + Dinero(double valor, int cantidad)
}

class Mantenimiento {
    + nombre
    + tipo

    + Mantenimiento()
    + generarReposicion()
}

Maquina *--r Mantenimiento
Maquina o--- Producto
Maquina o--- Billete
Maquina o--- Moneda

Dinero <|--- Billete
Dinero <|--- Moneda

@enduml